# libann

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat  makefile
.github/workflows/: regression-tests.yml
include/: ann.h
lib/: libann.dylib
src/: CMakeLists.txt  activationfunctions.cc  activationfunctions.h  arraytools.h  backpropagate.cc  backpropagate.h  boxcox.cc  boxcox.h  cliplog.cc  cliplog.h  compile.bat  compileobj.bat  costfunction.cc  costfunction.h  makefile  matrix.cc  matrix.h  matrixarray.cc  matrixarray.h  matrixmath.cc  matrixmath.h  network.cc  network.h  networkfunc.cc  networkfunc.h  randomnumber.cc  randomnumber.h  readarray.cc  readarray.h  regularization.cc  regularization.h  softmax.cc  softmax.h
test/: CMakeLists.txt  activation_tests.cc  ann_tests  loss_regularization_tests.cc  makefile  matdot.cc  matdot.h  matrix_ops_tests.cc  networkfunc_integration_tests.cc  test_helpers.h  test_main.cc
